src/test/resources/semantic/correct/TC_BASIC_HERENCIA_VARIABLES.ru
struct A{
    Int a;
    Bool b;
    Char c;
}

impl A{
    .(){

    }

}

struct B:A{
    Str s;
    Array Int arr;
}

impl B{
    .(){

    }
}

struct C:B{
    Array Int listaInt;
}
impl C{
    .(){
        
    }
}
start{

}