src/test/resources/semantic/error/TC_ERROR_START.ru
struct A{

}
impl A{
    .(){}
}

start{

}
start{
    
}